syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.sentidas.rangiffler.grpc";
option java_outer_classname = "RangifflerPhotoProto";

service RangifflerPhotoService {
  rpc GetUserPhotos (PhotoPageRequest) returns (PhotosPageResponse) {}
  rpc GetFeedPhotos (PhotoPageRequest) returns (PhotosPageResponse) {}

  rpc CreatePhoto (CreatePhotoRequest) returns (PhotoResponse) {}
  rpc UpdatePhoto (UpdatePhotoRequest) returns (PhotoResponse) {}
  rpc DeletePhoto (DeletePhotoRequest) returns (google.protobuf.Empty) {}

  rpc GetPhotoLikes (PhotoIdRequest) returns (Likes) {}
  rpc ToggleLike (LikeRequest) returns (PhotoResponse) {}

  rpc GetStorageMode(google.protobuf.Empty) returns (PhotoStorageModeResponse) {}
}

// ---- Paging ----

message PageRequest {
  int32 page = 1;
  int32 size = 2;
}

message PhotoPageRequest {
  string user_id = 1;
  int32 page = 2;
  int32 size = 3;
  optional bool include_total = 4; //  по запросу посчитать глобальный total
}

message PhotosPageResponse {
  int32 total_elements = 1;
  bool first = 2;
  bool last = 3;
  int32 page = 4;
  int32 size = 5;
  repeated PhotoResponse content = 6;
  optional int32 total = 7;  // глобальное количество по всей выборке (если include_total=true)
}

// ---- Photo ----

message PhotoIdRequest {
  string id = 1;
}

message DeletePhotoRequest {
  string id = 1;
  string requester_id = 2;
}

message PhotoResponse {
  string photo_id = 1;
  string user_id = 2;
  string src = 3;
  string country_code = 4;
  string description = 5;
  google.protobuf.Timestamp creationDate = 6;
  Likes likes = 7;
}

message CreatePhotoRequest {
  string user_id = 1;
  string src = 2;
  string country_code = 3;
  string description = 4;
}

message UpdatePhotoRequest {
  string photo_id = 1;
  string requester_id = 2;
  optional string src = 3;
  optional string country_code = 4;
  optional string description = 5;
}

// ---- Like ----

message LikeRequest {
  string photo_id = 1;
  string user_id = 2;
}

message Likes {
  int32 total = 1;
  repeated Like likes = 2;
}

message Like {
  string user_id = 1;
  google.protobuf.Timestamp creationDate = 2;
}

message PhotoStorageModeResponse {
  string mode = 1; // "BLOB" или "OBJECT"
}




